# AgriSearch

./: .gitignore  .graphifyignore  CLAUDE.md  README.md  documentation.md  ejecucion.md  insert_test_article.py  plan_a_seguir.md  pytest.ini  start_agrisearch.bat  start_agrisearch.cmd  test_output.txt
.agents/workflows/: add-endpoint.md  add-frontend.md  git-commits.md  run-locally.md  update-documentation.md
active_learning_worker/: Cargo.toml
active_learning_worker/src/: lib.rs  main.rs
active_learning_worker/src/api/: mod.rs
active_learning_worker/src/db/: mod.rs
active_learning_worker/src/ml/: acquisition.rs  linear.rs  mod.rs  prototypical.rs
active_learning_worker/tests/: integration_test.rs
backend/: .env.example  README.md  check_db.py  dump_schema.py  fix_db.py  main.py  pyproject.toml  requirements.txt  test_db.py  test_db_out.txt  test_list.py
backend/app/: main.py
backend/app/api/v1/: events.py  graphs.py  projects.py  screening.py  search.py  system.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: __init__.py  article_reference.py  graph_models.py  project.py  schemas.py
backend/app/services/: active_learning_service.py  circuit_breaker.py  document_parser_service.py  download_service.py  graph_service.py  llm_service.py  oa_resolver.py  pdf_enrichment_service.py  pdf_parser.py  pdf_parser_microservice.py  query_builder.py  query_verifier.py  reference_extractor.py  retry_client.py  scihub_service.py  search_service.py  summarization_service.py  vector_service.py
backend/app/services/mcp_clients/: arxiv_client.py  core_client.py  crossref_client.py  oaipmh_client.py  openalex_client.py  redalyc_client.py  scielo_client.py  semantic_scholar_client.py
backend/data/projects/CNN_Vision_Attention/Busqueda_1/descargas/: 2012_Shirasawa_The_tomato_genome_sequence_provides_insights_into_.md  2015_Čermák_High-frequency,_precise_modification_of_the_tomato.md  2019_Quinet_Tomato_Fruit_Development_and_Metabolism.md  2022_Alonge_Automated_assembly_scaffolding_using_RagTag_elevat.md
backend/temp/: backup_db.py  create_article_references_table.py  create_tables.py  fix_diagram.py  init_db.py
docs/: arquitectura.md  database_schema_current.json  documentation.md  graph_database_schema.json  plan_a_seguir.md
docs/architecture/: arquitectura.md
docs/database/: database_architecture.json  database_diagram.md  database_schema_expected.json
docs/process/tareas/: task_2_0.md
docs/tareas/: task_2_0.md
frontend/: README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: config.js  react-latex-next.d.ts
frontend/src/components/: Dashboard.tsx  GraphBuildModal.tsx  GraphExplorer.tsx  GraphNodePanel.tsx  GraphStatsBar.tsx  GraphToolbar.tsx  GraphVisualization.tsx  ProgressModal.tsx  ProjectDashboard.tsx  ScreeningPage.tsx  ScreeningSession.tsx  ScreeningSetup.tsx  SearchWizard.tsx  SearchWizardDescribe.tsx  SearchWizardResults.tsx  SearchWizardReview.tsx  SearchWizardSearching.tsx
frontend/src/hooks/: useOllamaModels.ts
frontend/src/layouts/: MainLayout.astro
frontend/src/lib/: api.ts  graph-api.ts
frontend/src/pages/: graphs.astro  index.astro  project.astro  screening.astro  search.astro
scripts/: benchmark_latency.py  create_test_db.py  download_test_pdfs.py  prepare_embeddings.py
tests/: test_conversion_manual.py
tests/assets/pdf/: README.md  generate_md.py  update_readme.py
tests/backend/: conftest.py  test_conversion_manual.py  test_output.md
tests/backend/integration/: test_db_clients_diagnostic.py  test_dual_parser.py  test_dual_parser_run.py  test_external_apis.py  test_graph_api.py  test_graph_e2e.py  test_pdf_parser.py  test_qdrant_rag.py  test_real_apis.py  test_search_preview_api.py
tests/backend/integration/fixtures/expected_outputs/: 2019_Dai_Signal-Based_Intelligent_Hydraulic_Fault_Diagnosis_markitdown_pipeline.md  2019_Dai_Signal-Based_Intelligent_Hydraulic_Fault_Diagnosis_opendataloader_pipeline.md  README.md
tests/backend/integration/fixtures/sample_inputs/: README.md
tests/backend/unit/: test_active_learning.py  test_active_learning_with_pdfs.py  test_arxiv_real_conversion.py  test_arxiv_search.py  test_circuit_breaker.py  test_citation_graph.py  test_client_parsing.py  test_direct_image_vlm.py  test_download_service.py  test_graph_build_background.py  test_graph_service.py  test_new_query_builders.py  test_oa_resolver.py  test_pdf_parser_microservice.py  test_pdf_preprocessing.py  test_pipeline_flow.py  test_query_builder_comprehensive.py  test_query_parser.py  test_query_verifier.py  test_reference_extraction.py  test_reference_md_extraction.py  test_retry_client.py  test_scihub_service.py  test_search_clients.py  test_search_tracking.py  test_system_api.py
tests/backend/unit/outputs/: arxiv_2507.09375v1.md  sample_unit_test.md
tests/integration/: test_external_apis.py  test_pdf_parser.py
tests/scratch/: test_table_flattener.py
tests/temporal/: compare_parsers.py  import_benchmarking_pdfs.py  inspect_pdf_metadata.py  run_markitdown.py  run_opendataloader.py
tests/unit/: test_llm_service.py  test_new_clients.py  test_pdf_preprocessing.py  test_query_builder.py  test_screening_api.py  test_thematic_graph.py
