[package]
name = "active_learning_worker"
version = "0.1.0"
edition = "2021"
description = "Active Learning microservice for AgriSearch screening"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base de datos
rusqlite = { version = "0.32", features = ["bundled"] }

# Machine Learning
ndarray = "0.16"
linfa = "0.8"
linfa-linear = "0.8"

# ONNX Runtime (inferencia de embeddings)
ort = "2.0.0-rc.12"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilidades
anyhow = "1"
