[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "docling>=2.84.0",
    "docling-core>=2.71.0",
    "faker>=40.12.0",
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "litellm>=1.83.3",
    "lxml>=6.0.2",
    "markupsafe>=3.0.3",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.24",
    "qdrant-client>=1.17.1",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.3",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.43.0",
]
